--- a/index.html
+++ b/index.html
@@ -98,52 +98,28 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>Today is not just any ordinary day...</p>
+				<p>It’s a day filled with magic and meaning.</p>
+				<p>A reminder of how fast time flies...</p>
+				<p>but also how special each moment can be.</p>
+				<p>And today, this moment...</p>
+				<p>belongs entirely to you.</p>
+				<p>It’s your day — your beautiful birthday.</p>
+				<p>So, I wanted to give you something...</p>
+				<p>a small gift made with all my heart.</p>
+				<p>Thank you for every smile we’ve shared,</p>
+				<p>for every memory we’ve created,</p>
+				<p>and for simply being you.</p>
+				<p>I hope this year brings you closer to your dreams,</p>
+				<p>fills your days with laughter and love,</p>
+				<p>and wraps you in happiness wherever you go.</p>
+				<p>May your heart always be light,</p>
+				<p>your wishes always find their way to reality,</p>
+				<p>and your journey ahead be as beautiful as your smile.</p>
+				<p>So today, and every day after,</p>
+				<p>remember — you are special, you are loved,</p>
+				<p>and you deserve nothing but the best.</p>
+				<p>Happy Birthday, Angel!</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
