--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<p>So today, and every day after,</p>
 				<p>remember — you are special, you are loved,</p>
 				<p>and you deserve nothing but the best.</p>
-				<p>Happy Birthday, Angel!</p>
+				<p>Happy Birthday, Angle (Ayan)!</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
